分类页开发

--- a/project.config.json
+++ b/project.config.json
@@ -71,6 +71,20 @@
 					"pathName": "pages/detail/detail",
 					"query": "iid=1m70y5k",
 					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "购物车页面",
+					"pathName": "pages/cart/cart",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "分类页",
+					"pathName": "pages/category/category",
+					"query": "",
+					"scene": null
 				}
 			]
 		}
